discussion/kv_engine/155325/155325_rev15_discussion.txt
======================================================================================================================
DESCRIPTION:

Test clang-tidy

Change-Id: Id59d503a56fd211f798fbbfb25344e2b41ecb590

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2021-06-15 15:02:42.000000000
Message: 
Uploaded patch set 15.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-15 15:05:11.000000000
Message: 
Patch Set 15: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9917/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/server_log_iface.h:14:10: error: "spdlog/common.h" file not found [clang-diagnostic-error]
#include <spdlog/common.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9917/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/server_log_iface.h:14:10:
error: "spdlog/common.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9917/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8503/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
